--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -1,3 +1,5 @@
-.messages{
-    padding: 2%;
+.messages {
+  padding: 2%;
+  height: 75vh;
+  width: 70vw;
 }
